# rust_archive

./: .gitignore  Readme.md
concepts/control_flow/src/: main.rs
concepts/enums/: main.rs
concepts/implementation/: main  main.rs
concepts/modules/restaurant/src/: lib.rs  main.rs
concepts/src/: main.rs
concepts/structs/: main.rs
docs/: commands.md  error_handling.md  notes.md
grep/: file.txt
grep/src/: main.rs
guessing_game/src/: main.rs
rust_axum_mysql/: Cargo.toml
rust_axum_mysql/src/: main.rs
rustlings_solved/01_variables/: variables3.rs  variables5.rs
rustlings_solved/02_functions/: functions1.rs
rustlings_solved/03_if/: if3.rs
rustlings_solved/04_primitive_types/: primitive_types1.rs  primitive_types2.rs  primitive_types3.rs  primitive_types5.rs
rustlings_solved/05_vecs/: vecs1.rs
rustlings_solved/06_move_semantics/: move_semantics4.rs  move_semantics5.rs
rustlings_solved/07_structs/: structs1.rs  structs2.rs
rustlings_solved/08_enums/: enums2.rs  enums3.rs
rustlings_solved/09_strings/: strings3.rs
rustlings_solved/10_modules/: modules2.rs  modules3.rs
rustlings_solved/11_hashmaps/: hashmaps1.rs  hashmaps2.rs  hashmaps3.rs
rustlings_solved/12_options/: options2.rs
rustlings_solved/13_error_handling/: errors1.rs  errors2.rs  errors3.rs  errors4.rs
todo_app/: Cargo.toml  todo.json
todo_app/src/: main.rs
utils/: Cargo.toml
utils/docs/: index.md
utils/src/: file_handler.rs  main.rs
