[package]
name = "rust_axum_mysql"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.0", features = ["full"] }
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["full"] }
